// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserInterface Snapshots displayActiveContext output snapshot 1`] = `
"[32m[39m
[32m✅ Current path matches context: [1mwork[22m[39m
[32mUsing git config from: ~/.gitconfig.d/work.gitconfig[39m
[2m[22m
[2mActive Git Configuration:[22m
[2m-----------------------------------[22m
[2muser.name=Work User[22m
[2muser.email=work@example.com[22m"
`;

exports[`UserInterface Snapshots displayContexts output snapshot 1`] = `
"[34m[39m
[34m📋 Your Git Context Configurations:[39m
[34m═════════════════════════════════════════════════[39m

[1m[37m[48;2;106;13;173m WORK [49m[39m[22m [35mContext[39m
[35m─────────────────────────────────────────────────[39m
[32m👤[39m [33mUser Name:[39m  [37mWork User[39m
[32m📧[39m [33mUser Email:[39m [37mwork@example.com[39m
[32m📂[39m [33mPath Pattern:[39m [37m/Users/burtonp/work/**[39m
[32m📄[39m [33mConfig File:[39m [2m~/.gitconfig.d/work.gitconfig[22m

[1m[37m[48;2;13;106;157m PERSONAL [49m[39m[22m [36mContext[39m
[36m─────────────────────────────────────────────────[39m
[32m👤[39m [33mUser Name:[39m  [37mPersonal User[39m
[32m📧[39m [33mUser Email:[39m [37mpersonal@example.com[39m
[32m📂[39m [33mPath Pattern:[39m [37m/Users/burtonp/personal/**[39m
[32m🔑[39m [33mSigning Key:[39m [37mABC123[39m
[32m✍️[39m [33mAuto Sign:[39m   [32mEnabled[39m
[32m📄[39m [33mConfig File:[39m [2m~/.gitconfig.d/personal.gitconfig[22m
[34m[39m
[34m═════════════════════════════════════════════════[39m
[32m💡[39m [37mTo check which context applies to your current directory:[39m
   [36mRun:[39m [37mgit-context apply[39m"
`;

exports[`UserInterface Snapshots displayContextsList output snapshot 1`] = `
"[34mConfigured Git Contexts:[39m
[34m====================================[39m
[32m[39m
[32m🔹 Context: [1mwork[22m[39m
   Path Pattern: [36m/Users/burtonp/work/**[39m
   Config File: [36m~/.gitconfig.d/work.gitconfig[39m
[32m[39m
[32m🔹 Context: [1mpersonal[22m[39m
   Path Pattern: [36m/Users/burtonp/personal/**[39m
   Config File: [36m~/.gitconfig.d/personal.gitconfig[39m"
`;

exports[`UserInterface Snapshots displayContextsWithUrlPatterns output snapshot 1`] = `
"[34m[39m
[34m📋 Your Git Context Configurations:[39m
[34m═════════════════════════════════════════════════[39m

[1m[37m[48;2;106;13;173m WORK [49m[39m[22m [35mContext[39m
[35m─────────────────────────────────────────────────[39m
[32m👤[39m [33mUser Name:[39m  [37mWork User[39m
[32m📧[39m [33mUser Email:[39m [37mwork@example.com[39m
[32m📂[39m [33mPath Patterns:[39m
   [37m~/work/**[39m
[32m🔗[39m [33mURL Patterns:[39m
   [37mgithub.com/work/*[39m
[32m📄[39m [33mConfig File:[39m [2m~/.gitconfig.d/work.gitconfig[22m

[1m[37m[48;2;13;106;157m PERSONAL [49m[39m[22m [36mContext[39m
[36m─────────────────────────────────────────────────[39m
[32m👤[39m [33mUser Name:[39m  [37mPersonal User[39m
[32m📧[39m [33mUser Email:[39m [37mpersonal@example.com[39m
[32m📂[39m [33mPath Patterns:[39m
   [37m~/personal/**[39m
[32m🔗[39m [33mURL Patterns:[39m
   [37mgithub.com/personal/*[39m
[32m🔑[39m [33mSigning Key:[39m [37mABC123[39m
[32m✍️[39m [33mAuto Sign:[39m   [32mEnabled[39m
[32m📄[39m [33mConfig File:[39m [2m~/.gitconfig.d/personal.gitconfig[22m
[34m[39m
[34m═════════════════════════════════════════════════[39m
[32m💡[39m [37mTo check which context applies to your current directory:[39m
   [36mRun:[39m [37mgit-context apply[39m
[32m💡[39m [37mTo detect context from repository URL:[39m
   [36mRun:[39m [37mgit-context detect-url[39m"
`;

exports[`UserInterface Snapshots displayError output snapshot 1`] = `
"[31m[39m
[31m❌ Error: Something went wrong[39m"
`;

exports[`UserInterface Snapshots displayHeader output snapshot 1`] = `
"[34m========================================[39m
[34mTest Header[39m
[34m========================================[39m"
`;

exports[`UserInterface Snapshots displaySetupInfo output snapshot 1`] = `
"
Let's set up your Git contexts. For each context, you'll need to provide:
  - A name (e.g., "personal", "work")
  - A path pattern to match repositories for this context (e.g., "~/personal/**")
  - User details (name, email) for the context"
`;

exports[`UserInterface Snapshots displaySuccess output snapshot 1`] = `
"[32m[39m
[32m✅ Operation completed successfully[39m"
`;

exports[`UserInterface Snapshots displayTemplates output snapshot 1`] = `
"[34m[39m
[34mAvailable Templates:[39m
[34m====================================[39m
[32m[39m
[32m🔹 [1mwork[22m[39m
   Description: [36mWork template[39m
   URL Patterns: [36mgithub.com/work/*[39m
[32m[39m
[32m🔹 [1mpersonal[22m[39m
   Description: [36mPersonal template[39m
   URL Patterns: [36mgithub.com/personal/*[39m"
`;

exports[`UserInterface Snapshots displayWarning output snapshot 1`] = `
"[33m[39m
[33m⚠️ This is a warning[39m"
`;
